<resources>
    <string name="app_name">SmartAlert</string>
    <string-array name="spinnerEventTypes">
        <item>Fire</item>
        <item>Flood</item>
        <item>Earthquake</item>
        <item>Tornado</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="submit_event">Submit Event</string>
    <string name="comments">Comments</string>
    <string name="type_of_event">Type of Event</string>
    <string name="add_image">Add image</string>
    <string name="login">Login</string>
    <string name="welcome_to_smartalert">Welcome to SmartAlert</string>
    <string name="no_account_register">No Account? Register.</string>
    <string name="register">Register</string>
    <string name="already_have_an_account_login">Already have an account? Login.</string>
    <string name="button" translatable="false">Button</string>
    <string name="textview" translatable="false">TextView</string>
    <string name="name">Name</string>
    <string name="lastname">Lastname</string>
    <string name="complete_register">Complete register</string>
    <string name="user_extra_info">User Extra Info</string>
    <string name="event_title">Event Title</string>
    <string name="title">Title</string>
    <string name="message">Message</string>
    <string name="search_events">Search Events</string>
    <string name="comment">Comment</string>
    <string name="flood">Flood</string>
    <string name="tornado">Tornado</string>
    <string name="earthquake">Earthquake</string>
    <string name="fire">Fire</string>
    <string name="select_date">Select Date</string>
    <string name="user_info">User Info</string>
    <string name="logout">Logout</string>
    <string name="recommended_events_could_not_be_retrieved">Recommended events could not be retrieved</string>
    <string name="please_log_in">Please log in</string>
    <string name="no_recommended_alerts_were_found">No recommended alerts were found</string>
    <string name="no_selected_event_type_found">No selected event type found</string>
    <string name="location_not_found_please_try_again">Location not found, please try again</string>
    <string name="please_add_a_comment">Please add a comment</string>
    <string name="event_submitted_successfully">Event submitted successfully</string>
    <string name="unknown_error_occurred_event_could_not_be_submitted">Unknown error occurred. Event could not be submitted</string>
    <string name="no_events_found_for_the_given_criteria">No events found for the given criteria</string>
    <string name="user_created_successfully">User created successfully</string>
    <string name="user_logged_in_successfully">User logged in successfully</string>
    <string name="user_not_found_in_the_database">User not found in the database</string>
    <string name="required_data_is_missing">Required data is missing</string>
    <string name="unknown_error_occurred_user_could_not_be_submitted">Unknown error occurred. User could not be submitted</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="no_notifications_found_for_the_given_criteria">No notifications found for the given criteria.</string>
    <string-array name="navigation">
        <item>Events</item>
        <item>Create Event</item>
        <item>Settings</item>
    </string-array>
    <string-array name="navigation_civil">
        <item>Events</item>
        <item>Civil Functionality</item>
        <item>Settings</item>
    </string-array>
    <string name="suggest_emergency_services_call">If you are having an emergency, please call your local emergency services immediately!</string>
    <string name="proceed_without_an_image">Do you want to proceed without adding an image?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="my_locations">Οι διευθύνσεις μου</string>
    <string name="personal_info">Προσωπικά στοιχεία</string>
    <string name="update" />
    <string name="confirm_password"></string>
    <string name="no_addresses" />
    <string name="questioner" />

</resources>
