<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundcolor"
    tools:context=".Functionality.Fragments.NotificationListFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/buttonDatePickerStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:background="@drawable/datepicker_button"
                android:textColor="@color/primarycolor"
                android:text="@string/select_date" />

            <Button
                android:id="@+id/buttonDatePickerEnd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="@drawable/datepicker_button"
                android:backgroundTint="@color/white"
                android:text="@string/select_date"
                android:textColor="@color/primarycolor" />
        </LinearLayout>

        <com.google.android.flexbox.FlexboxLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:flexbox="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            flexbox:alignItems="flex_start"
            flexbox:flexWrap="wrap"
            flexbox:justifyContent="flex_start"
            android:padding="16dp"
            tools:ignore="MissingClass">

            <CheckBox
                android:id="@+id/fireCheckbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fire"
                android:textColor="#AA4203"
                android:buttonTint="#AA4203"/>
            <CheckBox
                android:id="@+id/earthquakeCheckbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/earthquake"
                android:textColor="#8B4513"
                android:buttonTint="#8B4513"/>
            <CheckBox
                android:id="@+id/tornadoCheckbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tornado"
                android:textColor="#808080"
                android:buttonTint="#808080"/>
            <CheckBox
                android:id="@+id/floodCheckbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/flood"
                android:textColor="#0000FF"
                android:buttonTint="#0000FF"/>

        </com.google.android.flexbox.FlexboxLayout>


        <Button
            android:id="@+id/getEvents"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/primarycolor"
            android:onClick="getEvents"
            android:text="@string/search_events" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true"
            android:gravity="center"
            android:orientation="vertical">
            <TextView
                android:id="@+id/searchResults"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </TextView>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/reportContainer"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:orientation="vertical"
                android:layout_weight="1">


                <!-- Dynamic report content will be added here -->
            </androidx.recyclerview.widget.RecyclerView>
        </LinearLayout>
    </LinearLayout>

</FrameLayout>