<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundcolor"
    android:orientation="vertical"
    tools:context=".Functionality.Fragments.PersonalInfoFragment">
    <include layout="@layout/header_layout"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">


        <ViewFlipper
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/left_side_color"
            android:padding="15dp"
            android:backgroundTint="@color/white">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <!--Email -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textColor="@color/primarycolor"/>
                <EditText
                    android:id="@+id/editEmail"
                    android:layout_marginBottom="10dp"
                    android:padding="20dp"
                    android:background="@drawable/datepicker_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"/>


                <!--Name-->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textColor="@color/primarycolor"/>
                <EditText
                    android:id="@+id/editName"
                    android:layout_marginBottom="10dp"
                    android:padding="20dp"
                    android:background="@drawable/datepicker_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"/>

                <!--Lastname-->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lastname"
                    android:textColor="@color/primarycolor"/>

                <EditText
                    android:id="@+id/editLastname"
                    android:layout_marginBottom="10dp"
                    android:padding="20dp"
                    android:background="@drawable/datepicker_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/lastname"/>

                <!--Password-->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    android:textColor="@color/primarycolor"/>
                <EditText
                    android:id="@+id/editPassword"
                    android:layout_marginBottom="10dp"
                    android:padding="20dp"
                    android:inputType="textPassword"
                    android:background="@drawable/datepicker_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"/>

                <!--Confirm Password-->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/confirm_password"
                    android:textColor="@color/primarycolor"/>
                <EditText
                    android:id="@+id/confirmPassword"
                    android:layout_marginBottom="10dp"
                    android:padding="20dp"
                    android:inputType="textPassword"
                    android:background="@drawable/datepicker_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirm_password"/>

                <Button
                    android:id="@+id/updateButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/primarycolor"
                    android:text="@string/update" />


            </LinearLayout>

        </ViewFlipper>


    </LinearLayout>

</LinearLayout>

