<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@color/backgroundcolor"
    tools:context=".Functionality.Fragments.CreateEventFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/primarycolor"
            android:text="@string/comment">
        </TextView>

        <EditText
            android:layout_gravity="center"
            android:id="@+id/editTextComments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/comments"
            android:background="@drawable/datepicker_button"
            android:padding="16dp"
            android:textColor="@color/primarycolor"
            android:inputType="textMultiLine" />

        <TextView
            android:layout_marginTop="10dp"
            android:id="@+id/textViewEventType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/primarycolor"
            android:text="@string/type_of_event" />
        <Spinner
            android:id="@+id/spinnerEventTypes"
            android:layout_width="match_parent"
            android:background="@drawable/datepicker_button"
            android:padding="10dp"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_marginTop="10dp"
                android:id="@+id/openCamera"
                android:layout_gravity="center"
                android:layout_width="50dp"
                android:layout_height="50dp" />
            <ImageView
                android:layout_marginTop="10dp"
                android:id="@+id/openFile"
                android:layout_gravity="center"
                android:layout_width="50dp"
                android:layout_height="50dp" />
        </LinearLayout>

        <ImageView
            android:layout_marginTop="10dp"
            android:id="@+id/imageShower"
            android:layout_gravity="center"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:visibility="gone"/>


        <Button
            android:backgroundTint="@color/primarycolor"
            android:id="@+id/buttonSubmitEvent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/submit_event"/>
    </LinearLayout>






</FrameLayout>