<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Functionality.Fragments.SettingsFragment"
    android:background="@color/backgroundcolor">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">


        <!--Personal info -->
        <LinearLayout
            android:id="@+id/personal_info"
            android:layout_gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="20dp"
            android:background="@drawable/left_side_color"
            android:layout_marginBottom="10dp">
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="end"
                android:backgroundTint="@color/primarycolor"
                android:src="@drawable/person">
            </ImageView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/personal_info">
            </TextView>

        </LinearLayout>

        <!--My locations -->
        <LinearLayout
            android:id="@+id/my_locations"
            android:layout_gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="20dp"
            android:background="@drawable/left_side_color"
            android:layout_marginBottom="10dp">
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="end"
                android:src="@drawable/baseline_add_location_alt_24">
            </ImageView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/my_locations">
            </TextView>

        </LinearLayout>

        <!--Logout -->
        <LinearLayout
            android:id="@+id/questionnaire"
            android:layout_gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="20dp"
            android:background="@drawable/left_side_color"
            android:layout_marginBottom="10dp">
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="end"
                android:src="@drawable/baseline_quiz_24">
            </ImageView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/questioner">
            </TextView>

        </LinearLayout>

        <!--Questions -->
        <LinearLayout
            android:id="@+id/logout"
            android:layout_gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="20dp"
            android:background="@drawable/left_side_color">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/fire"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/logout">
            </TextView>

        </LinearLayout>
    </LinearLayout>


</FrameLayout>